finnished AddFullRow function from image_browser.cpp

--- a/homeworks/hw3/web_app/web_app.html
+++ b/homeworks/hw3/web_app/web_app.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
- <title>Hello, this html file was generated from C++/title
- <head>
-  <link> rel= "text/css" href="style.css" 
- <head>
-<html>
+<title>Hello, this html file was generated from C++</title>
+<head>
+  <link rel= "text/css" href="style.css" /> 
+</head>
+<body>
+  <div class="row">
+    <div class = "column">
+      <h2>000000.png</h2>
+      <img src="data/000000.png"/>
+      <p>score = 0.05</p>
+  </div>
+</body>
+</html>
